--- a/.github/workflows/aseprite_build_deploy.yml
+++ b/.github/workflows/aseprite_build_deploy.yml
@@ -1,8 +1,6 @@
 name: Build and deploy Aseprite
 
 on:
-  schedule:
-    - cron: '0 0 * * *'
   push:
     branches:
       - main
@@ -23,7 +21,7 @@ jobs:
     - name: Get latest version info
       id: version_info
       run: |
-        data=$(curl -sL https://api.github.com/repos/aseprite/aseprite/releases/186770485)
+        data=$(curl -sL https://api.github.com/repos/aseprite/aseprite/releases/latest)
         LATEST_TAG=$(echo "${data}" | jq -r '.tag_name')
         DOWNLOAD_URL=$(echo "${data}" | jq -r '.assets[].browser_download_url')
         VERSION_INFO=$(echo "${data}" | jq -r '.body')
@@ -65,11 +63,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest, macOS-latest]
+        os: [windows-latest]
         arch: [x64]
-        include:
-          - os: macOS-latest
-            arch: arm64
       fail-fast: false    
     steps:
       - name: (Windows) Install dependencies
